--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@ npm-debug.log
 .tm_properties
 .vscode
 .archive
+
+# Xcode user files
+xcuserdata/
+
+
+# CocoaPods
+#
+# We recommend against adding the Pods directory to your .gitignore. However
+# you should judge for yourself, the pros and cons are mentioned at:
+# https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
+#
+Pods/
